--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -57,17 +57,9 @@
                                 <span></span>
                             </div>
                         </div>
-                        <img ng-show="item.data.topImage && item.imageLoaded" alt="{{item.data.title}}"
-                             class="load-image-hidden"
-                             aria-hidden="true"
-                             load-image="16x9"
-                             style="width:100%;"
-                             crop-width="340"
-                             crop-height="190"
-                             crop-type="crop"
-                             image-item="item"
-                             data-final-src="{{item.data.topImage}}"
-                             tabindex="0">
+                        <img ng-show="item.data.topImage && item.imageLoaded" alt="{{item.data.title}}" class="load-image-hidden" aria-hidden="true"
+                             load-image="16x9" style="width:100%;" crop-width="340" crop-height="190" crop-type="crop" image-item="item"
+                             data-final-src="{{item.data.topImage}}" tabindex="0">
                         <img alt="{{item.data.title}}" aria-hidden="true" ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png"
                             style="width:100%;">
                     </div>
