Add image loading placeholders to item layouts

--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -6,9 +6,17 @@
                 class="plugin-slider text-center">
                 <div ng-class="WidgetMedia.showVideo == false ? '' : 'video-container-background'"
                     style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;" class="plugin-slide">
+                    <div ng-if="!WidgetMedia.fullScreen && WidgetMedia.item.data.topImage && !WidgetMedia.item.imageLoaded && !WidgetMedia.showVideo && !(skipMediaPage && WidgetMedia.item.data.videoUrl)"
+                        class="image-placeholder" ng-style="{'padding-top': ((9 / 16) * 100) + '%'}">
+                        <div class="image-placeholder__dots">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
                     <img ng-if="!WidgetMedia.fullScreen"
-                        ng-hide="WidgetMedia.showVideo || !WidgetMedia.item.data.topImage || ( skipMediaPage && WidgetMedia.item.data.videoUrl )"
-                        load-image="16x9" style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
+                        ng-hide="WidgetMedia.showVideo || !WidgetMedia.item.data.topImage || ( skipMediaPage && WidgetMedia.item.data.videoUrl ) || !WidgetMedia.item.imageLoaded"
+                        load-image="16x9" image-item="WidgetMedia.item" style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
                         crop-width="1280" crop-height="720" crop-type="crop" title="{{WidgetMedia.item.data.title}} top image" aria-label="{{WidgetMedia.item.data.title}} top image"
                         data-final-src="{{WidgetMedia.item.data.topImage }}" alt="{{WidgetMedia.item.data.title}} top image"/>
                         <img ng-if="!WidgetMedia.item.data.topImage && !WidgetMedia.showVideo" aria-hidden="true" src="../../../styles/media/holder-16x9.png" style="width:100%;">
