--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -51,8 +51,8 @@
         </span>
     </label>
     <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="skipInfoSwitch" type="checkbox" ng-model="Settings.data.design.skipMediaPage" ng-class="{'disabled': Settings.data.content.autoPlay}">
-        <label for="skipInfoSwitch" class="label-success" ng-class="{'disabled': Settings.data.content.autoPlay}"></label>
+        <input id="skipInfoSwitch" type="checkbox" ng-model="Settings.data.design.skipMediaPage">
+        <label for="skipInfoSwitch" class="label-success"></label>
     </div>
 </div>
 
@@ -110,7 +110,21 @@
 <div class="row margin-bottom-twenty flex flex-align-center">
     <label class="tooltip-container col-md-4"></label>
     <div class="button-switch col-md-9 flex flex-justify-end">
-        <p class="info-note w-100">Enabling this will disable 'Auto-Add All Audio to Playlist' and force 'Bypass Info Page' on.</p>
+        <p class="info-note w-100">Enabling this will disable 'Auto-Add All Audio to Playlist'</p>
+    </div>
+</div>
+
+<div class="row margin-bottom-twenty flex flex-align-center">
+    <label class="tooltip-container col-md-4">Enable List Shuffle
+        <span class="btn-info-icon btn-primary">
+            <span class="cp-tooltip">
+                Enable the shuffle feature in the player. Users can turn shuffle on/off in the app. Shuffle affects only the items currently loaded in the list, with more added as the user scrolls.
+            </span>
+        </span>
+    </label>
+    <div class="button-switch col-md-9 flex flex-justify-end">
+        <input id="shuffleAudioListItemsSwitch" type="checkbox" ng-model="Settings.data.content.shuffleAudioListItems" ng-class="{'disabled': !Settings.data.content.autoPlay}">
+        <label for="shuffleAudioListItemsSwitch" class="label-success" ng-class="{'disabled': !Settings.data.content.autoPlay}"></label>
     </div>
 </div>
 
