--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -63,6 +63,13 @@
             </div>
             <p class="wysiwyg" ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml">
             </p>
+            <div class="media-item-actions">
+                <div class="comments-action-section" ng-show="comment.enabled">
+                    <span class="cursor-pointer" ng-click="WidgetMedia.openMediaComments()">
+                        Comment
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
 </div>
