--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -73,6 +73,13 @@
                     </div>
                 </div>
                 <p class="wysiwyg" ng-if="WidgetMedia.item.data.body" ng-bind-html="WidgetMedia.item.data.body | safeHtml"></p>
+                <div class="media-item-actions">
+                    <div class="comments-action-section" ng-show="comment.enabled">
+                        <span class="cursor-pointer" ng-click="WidgetMedia.openMediaComments()">
+                            Comment
+                        </span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
