--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -56,58 +56,15 @@
     </div>
 </div>
 
-<div class="flex flex-align-start input-control margin-bottom-twenty side-label">
-    <label class="tooltip-container col-md-5 padding-zero">Allow Reactions
-        <span class="btn-info-icon btn-primary">
-            <span class="cp-tooltip">
-                Reactions let users quickly express feedback. Choose who can use them, and if enabled, select which
-                reaction set applies.
-            </span>
-        </span>
-    </label>
-    <div class="col-md-8 text-left padding-zero">
-        <div class="col-md-12 padding-zero margin-bottom-fifteen">
-            <div class="col-md-4 margin-top-zero radio radio-primary">
-                <input type="radio" ng-disabled="Settings.data.design.skipMediaPage" name="reactionsHandling" id="reactionsHandlingNoUser" value="none"
-                    ng-model="Settings.data.content.reactions.value"
-                    ng-checked="Settings.data.content.reactions.value==='none'" />
-                <label for="reactionsHandlingNoUser">No Users</label>
-            </div>
-            <div class="col-md-4 margin-top-zero radio radio-primary">
-                <input type="radio" ng-disabled="Settings.data.design.skipMediaPage" name="reactionsHandling" id="reactionsHandlingUser" value="tags"
-                    ng-model="Settings.data.content.reactions.value"
-                    ng-checked="Settings.data.content.reactions.value==='tags'" />
-                <label for="reactionsHandlingUser">Users With</label>
-            </div>
-            <div class="col-md-4 margin-top-zero radio radio-primary">
-                <input type="radio" ng-disabled="Settings.data.design.skipMediaPage" name="reactionsHandling" id="reactionsHandlingAll" value="all"
-                    ng-model="Settings.data.content.reactions.value"
-                    ng-checked="Settings.data.content.reactions.value==='all'" />
-                <label for="reactionsHandlingAll">All Users</label>
-            </div>
-        </div>
-        <div id="reactionsHandlingTagsInput" class="padding-right-zero"
-            ng-show="Settings.data.content.reactions.value==='tags'"></div>
-    </div>
-</div>
-
-<div class="flex flex-align-start input-control margin-bottom-twenty side-label" ng-show="Settings.data.content.reactions.value!=='none'">
-    <label class="tooltip-container col-md-5 padding-zero">Reactions</label>
-    <div class="col-md-8 text-left padding-zero">
-        <div id="reactionsGroupPicker"></div>
-	</div>
-</div>
-
-
-<div class="flex flex-align-start input-control margin-bottom-twenty side-label">
-    <label class="tooltip-container col-md-5 padding-zero">Allow Comments
+<div class="row flex flex-align-start input-control margin-bottom-twenty side-label">
+    <label class="tooltip-container col-md-4">Allow Comments
         <span class="btn-info-icon btn-primary">
             <span class="cp-tooltip">
                 Comments let users share thoughts and feedback. Choose who can use them.
             </span>
         </span>
     </label>
-    <div class="col-md-8 text-left padding-zero">
+    <div class="col-md-9 text-left">
         <div class="col-md-12 padding-zero margin-bottom-fifteen">
             <div class="col-md-4 margin-top-zero radio radio-primary">
                 <input type="radio" ng-disabled="Settings.data.design.skipMediaPage" name="commentsHandling" id="commentsHandlingNoUser" value="none"
